ci: 修改 Dockerfile perf: 修改编译 JDK 版本为 11，更改相应代码符合 JDK 11